--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^51.0.12",
+    "@expo/vector-icons": "^14.0.0",
+    "expo": "^51.0.14",
     "expo-status-bar": "~1.12.1",
+    "node": "^22.3.0",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-icons": "^5.2.1",
+    "react-native": "0.74.2",
+    "react-native-check-box": "^2.1.7",
+    "react-native-elements": "^3.4.3",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
