--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hadniva",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "type": "module",
+  "main": "node_modules/expo/AppEntry.js",
+  "type": "commonjs",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -13,6 +13,10 @@
     "@babel/runtime": "^7.24.7",
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/drawer": "^6.7.0",
+    "@react-navigation/native": "^6.1.17",
     "expo": "^51.0.18",
     "expo-status-bar": "~1.12.1",
     "node": "^22.3.0",
@@ -22,11 +26,16 @@
     "react-native": "^0.74.3",
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-preset-expo": "^11.0.12"
   },
   "private": true
 }
