--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.10.0",
     "expo": "^51.0.18",
     "expo-status-bar": "~1.12.1",
     "node": "^22.3.0",
