Baba abeg take it from here

--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -14,11 +14,14 @@
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "date-fns": "^3.6.0",
     "expo": "^51.0.18",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "node": "^22.3.0",
     "react": "18.2.0",
