--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -19,10 +19,12 @@
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "expo": "^51.0.18",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
+    "moment": "^2.30.1",
     "node": "^22.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +34,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "~3.10.1",
+    "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vector-icons": "^10.1.0",
