--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -13,6 +13,7 @@
     "@babel/runtime": "^7.24.7",
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.0",
