--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.7",
+    "@emailjs/browser": "^4.4.1",
     "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
@@ -22,6 +23,7 @@
     "@react-navigation/native-stack": "^6.10.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "expo": "^51.0.22",
     "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
@@ -33,6 +35,7 @@
     "react-native": "^0.74.3",
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^3.4.3",
+    "react-native-email": "^2.1.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-rss-parser": "^1.5.1",
