--- a/hadniva/package.json
+++ b/hadniva/package.json
@@ -37,6 +37,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-email": "^2.1.0",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-paper": "^5.12.4",
     "react-native-reanimated": "~3.10.1",
     "react-native-rss-parser": "^1.5.1",
     "react-native-safe-area-context": "4.10.1",
